Fixed horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -376,7 +376,6 @@ nav {
 .footer {
   font-size: 1.6rem;
   background-color: var(--dark-grey);
-  width: 100%;
 }
 
 .footer-copyright {
